test/files/neg/t4928.check
t4928.scala:3: error: parameter 'a' is already specified at parameter position 1
Note that 'z' is not a parameter name of the invoked method.
  f(z = 0, a = 1)
             ^
one error found
